fixed "request for demo" width overflow

--- a/src/app/component/nav/common/bottom-nav/bottom-nav.component.scss
+++ b/src/app/component/nav/common/bottom-nav/bottom-nav.component.scss
@@ -45,7 +45,7 @@
   color: var(--brand-color);
   border-radius: 0;
   border-bottom: var(--brand-color) 1px solid;
-  margin-right: 20px;
+  margin-right: 14px;
 }
 
 .bottom-nav .demo:hover {
